# qt-web-tools

./: .gitignore  README.md
demo/angular/: angular.json  package-lock.json
demo/angular/src/app/ts-cpp-object/: cpp-channel.service.ts  qwebchannel.d.ts
demo/qtapp/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  qt.cmake
demo/qtapp/qtapp/: CMakeLists.txt  JsCpp.cpp  JsCpp.h  QtWeb.cpp  QtWeb.ui  main.cpp
demo/qtapp/qtapp/http-server/: HttpServer.cpp  HttpServer.h
demo/qtweb/: angular.json  package-lock.json  package.json
demo/qtweb/src/app/pages/welcome/: welcome.component.html  welcome.component.ts
demo/vs/: QtWeb.sln
demo/vs/QtWeb/: QtWeb.h  QtWeb.qrc  QtWeb.vcxproj  QtWeb.vcxproj.filters
demo/vs/QtWeb/http-server/: WebChannelManager.cpp  WebChannelManager.h
http-server/: HttpServer.cpp  HttpServer.h
qwebchannel/: cpp-channel.service.ts
ts-cpp-object/: cpp-base-object.d.ts  cpp-object-demo.ts
